Progress Bar Update
- Updated Progress bar to display current spending vs budget for the month